<resources>
    <string name="app_name">CommandsHandler</string>
    <string name="TAG">CommandsHandler</string>
    <string name="action_settings">Settings</string>
    <string name="startService">Start Service</string>
    <string name="stopService">Start Service</string>
    <string name="checkService">Check Service</string>
    <string name="ipAddr">pgcontroller</string>
    <string name="port">12345</string>
</resources>
